# code-maintenance-refactoring-and-optimization

./: compose.yml  instruction.md  main.py  pyproject.toml  requirements.txt  task.toml
app/: main.py
app/api/: health.py  user.py
app/config/: __init__.py  testing.py
app/dependencies/: container.py
app/repositories/: user.py
app/services/: user.py
solution/: solve.sh
tests/: conftest.py  test_outputs.py
