[project]
name = "code-maintenance-refactoring-and-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black==25.12.0",
    "flake8==7.3.0",
    "flask==3.1.2",
    "pytest==9.0.2",
    "python-json-logger==4.0.0",
]
